# MeteorEngine

./: .gitignore  CMakeLists.txt  README.md  ttt.tex
.cache/clangd/index/: Acceleration.cpp.AF607E6231D1AEBC.idx  Acceleration.hpp.C7D43D30EC2D703A.idx  AlignedBox.h.CA53FCE856CD4404.idx  AmbiVector.h.5463A6A90D9F6E26.idx  Amd.h.3FFBE9B35A8A0C0D.idx  AngleAxis.h.C7591CDF5952B58A.idx  ArithmeticSequence.h.441CC5CBF3BC94C1.idx  Array.h.E57048E69B88041B.idx  ArrayBase.h.9B6A2F12D87AC175.idx  ArrayCwiseBinaryOps.h.1784C8532EB1BB91.idx  ArrayCwiseUnaryOps.h.2325F08947F05F90.idx  ArrayWrapper.h.BA9B79FB7CDC90B1.idx  Assign.h.3151E607431AF6B9.idx  AssignEvaluator.h.79FE489FA58FD136.idx  AssignmentFunctors.h.1749B7B07DD69DD1.idx  BDCSVD.h.F216BEBCA791F086.idx  BFloat16.h.AD088BF15CAFCFAF.idx  BandMatrix.h.BE3701FEA1F1739C.idx  BasicPreconditioners.h.A034802B168EB532.idx  BiCGSTAB.h.429F77AE6D8B95B3.idx  BinaryFunctors.h.1C7334DBF66BDAE9.idx  BlasUtil.h.BBF052956DC68FAC.idx  Block.h.9240D35DDB2E5197.idx  BlockHouseholder.h.D9A9465E447A18C9.idx  BlockMethods.h.1C00AEA8CA18C8BB.idx  BooleanRedux.h.CF532EA70ECA8936.idx  BoundBox.cpp.43386ED79BBBE304.idx  BoundBox.hpp.60F041254FACC1DA.idx  Camera.hpp.84D7BBDD5B2EA1BF.idx  Cholesky.7F804E3942601007.idx  ColPivHouseholderQR.h.2AE0418313DC739B.idx  CommaInitializer.h.F17EBF5DD23F0FED.idx  CommonCwiseBinaryOps.h.70CDD80B4132B399.idx  CommonCwiseUnaryOps.h.DF1B7451226DD1EA.idx  CompleteOrthogonalDecomposition.h.1F13B68272CFF8E0.idx  Complex.h.7788FFC13BC40849.idx  ComplexEigenSolver.h.1BEEEA484D52B82B.idx  ComplexSchur.h.86EA38A66AE8C8B5.idx  CompressedStorage.h.A94F40F7F93115F3.idx  ConditionEstimator.h.A02589B5ED4D70EA.idx  (+240 more)
include/: Acceleration.hpp  BoundBox.hpp  Camera.hpp  Circle.hpp  FileHelper.hpp  Intersection.hpp  Material.hpp  Mesh.hpp  ModelGenerator.hpp  NumericalMethods.hpp  OBJ_Loader.hpp  Object.hpp  Physics.hpp  Ray.hpp  Renderer.hpp  Scene.hpp  Shader.hpp  Sphere.hpp  Triangle.hpp  global.hpp
src/: Acceleration.cpp  BoundBox.cpp  Circle.cpp  FileHelper.cpp  Material.cpp  Mesh.cpp  Ray.cpp  Renderer.cpp  Scene.cpp  Sphere.cpp  Triangle.cpp  main.cpp
